# aiosqlitemydataclass

./: README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
aiosqlitemydataclass/: __init__.py  _extra_types.pyi  db.py
tests/: test_smoke.py
tests/unit/: test_extending_metadata.py
